--- a/k8s/dbs/templates/mongo.yaml
+++ b/k8s/dbs/templates/mongo.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.mongodb.name }}-{{ .Release.Namespace }}-secret
+  name: {{ .Values.mongodb.name }}-secret
   namespace: {{ .Release.Namespace }}
 type: Opaque
 data:
@@ -13,29 +13,29 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Values.mongodb.name }}-{{ .Release.Namespace }}-configmap
+  name: {{ .Values.mongodb.name }}-configmap
   namespace: {{ .Release.Namespace }}
 data:
-  mongodbHostname: "mongodb://{{ .Values.mongodb.secrets.rootUser }}:{{ .Values.mongodb.secrets.rootPass }}@{{ .Values.mongodb.name }}-{{ .Release.Namespace }}-srv:27017"
+  mongodbHostname: "mongodb://{{ .Values.mongodb.secrets.rootUser }}:{{ .Values.mongodb.secrets.rootPass }}@{{ .Values.mongodb.name }}-srv:27017"
 
 ---
 
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.mongodb.name }}-{{ .Release.Namespace }}-depl
+  name: {{ .Values.mongodb.name }}-depl
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ .Values.mongodb.labels.app }}-{{ .Release.Namespace }}
+    app: {{ .Values.mongodb.labels.app }}
     team: {{ .Values.mongodb.labels.team }}
 spec:
   selector:
     matchLabels:
-      app: {{ .Values.mongodb.labels.app }}-{{ .Release.Namespace }}
+      app: {{ .Values.mongodb.labels.app }}
   template:
     metadata:
       labels:
-        app: {{ .Values.mongodb.labels.app }}-{{ .Release.Namespace }}
+        app: {{ .Values.mongodb.labels.app }}
     spec:
       containers:
         - name: {{ .Values.mongodb.name }}-con
@@ -46,12 +46,12 @@ spec:
             - name: MONGO_INITDB_ROOT_USERNAME
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.mongodb.name }}-{{ .Release.Namespace }}-secret
+                  name: {{ .Values.mongodb.name }}-secret
                   key: rootUser
             - name: MONGO_INITDB_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.mongodb.name }}-{{ .Release.Namespace }}-secret
+                  name: {{ .Values.mongodb.name }}-secret
                   key: rootPass
             - name: TZ
               value: {{ .Values.global.envs.tz }}
@@ -59,10 +59,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.mongodb.name }}-{{ .Release.Namespace }}-srv
+  name: {{ .Values.mongodb.name }}-srv
 spec: 
   selector:
-    app: {{ .Values.mongodb.name }}-{{ .Release.Namespace }}
+    app: {{ .Values.mongodb.name }}
   ports:
     - port: {{ .Values.mongodb.ports.default }} 
       name: {{ .Values.mongodb.name }}
