--- a/k8s/extensions/templates/mongo-express.yaml
+++ b/k8s/extensions/templates/mongo-express.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.mongoExpress.name }}-{{ .Release.Namespace }}-depl
+  name: {{ .Values.mongoExpress.name }}-depl
   labels:
-    app: {{ .Values.mongoExpress.name }}-{{ .Release.Namespace }}
+    app: {{ .Values.mongoExpress.name }}
     team: {{ .Values.mongoExpress.labels.team }}
 spec:
   selector:
     matchLabels:
-      app: {{ .Values.mongoExpress.name }}-{{ .Release.Namespace }}
+      app: {{ .Values.mongoExpress.name }}
   template:
     metadata:
       labels:
-        app: {{ .Values.mongoExpress.name }}-{{ .Release.Namespace }}
+        app: {{ .Values.mongoExpress.name }}
     spec:
       containers:
-        - name: {{ .Values.mongoExpress.name }}-{{ .Release.Namespace }}-con
+        - name: {{ .Values.mongoExpress.name }}-con
           image: {{ .Values.mongoExpress.image.repository }}:{{ .Values.mongoExpress.image.tag }}
           ports:
             - containerPort: {{ .Values.mongoExpress.ports.default }}
@@ -23,36 +23,36 @@ spec:
             - name: ME_CONFIG_MONGODB_ADMINUSERNAME
               valueFrom:
                 secretKeyRef: 
-                  name: mongodb-{{ .Release.Namespace }}-secret
+                  name: mongodb-secret
                   key: rootUser
             - name: ME_CONFIG_MONGODB_ADMINPASSWORD
               valueFrom:
                 secretKeyRef: 
-                  name: mongodb-{{ .Release.Namespace }}-secret
+                  name: mongodb-secret
                   key: rootPass
             - name: ME_CONFIG_MONGODB_SERVER
-              value: mongodb-{{ .Release.Namespace }}-srv
+              value: mongodb-srv.{{ .Release.Namespace }}
             - name: ME_CONFIG_BASICAUTH_USERNAME
               valueFrom:
                 secretKeyRef: 
-                  name: mongodb-{{ .Release.Namespace }}-secret
+                  name: mongodb-secret
                   key: rootUser
             - name: ME_CONFIG_BASICAUTH_PASSWORD
               valueFrom:
                 secretKeyRef: 
-                  name: mongodb-{{ .Release.Namespace }}-secret
+                  name: mongodb-secret
                   key: rootPass
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.mongoExpress.name }}-{{ .Release.Namespace }}-srv
+  name: {{ .Values.mongoExpress.name }}-srv
 spec:
   selector:
-    app: {{ .Values.mongoExpress.name }}-{{ .Release.Namespace }}
+    app: {{ .Values.mongoExpress.name }}
   ports:
     - port: 8081
-      name: {{ .Values.mongoExpress.name }}-{{ .Release.Namespace }}-srv
+      name: {{ .Values.mongoExpress.name }}-srv
       targetPort: 8081
       protocol: TCP
   type: NodePort
