--- a/k8s/crons/values.yaml
+++ b/k8s/crons/values.yaml
@@ -7,5 +7,5 @@ mongoBackup:
   env:
     tz: 'Asia/Bangkok'
     backupVersion: 'v0.0.1'
-    backupDir: '/root'
+    backupDir: '/backups/mongo'
     
